--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "next": "latest",
     "next-mdx-remote": "^4.1.0",
     "next-remote-watch": "1.0.0",
+    "prettier": "^2.7.1",
     "prismjs": "^1.25.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
+    "@types/prettier": "^2",
     "autoprefixer": "^10.4.0",
     "eslint": "<9.0.0",
     "eslint-config-next": "12.2.5",
